# ct-screening-learning

./: .gitignore  README.md  pyproject.toml  run_hackathon_infer.py
ctlib/: build_csv.py  dicom_index.py  match_slice.py  protocols.py  slice_heatmap.py  visualize.py
ctlib/config/: paths.py
ctlib/infer/: evaluate.py  vis_overlay.py  vis_sample.py
ctlib/models/: unet_multitask.py
ctlib/train/: config.py  split.py  test.py  train_multitask.py
ctlib_binary/: infer_binary.py  roc.py  train_binary.py
ctlib_binary/config/: path.py
ctlib_binary/create_dataset/: build_registry_covid19_1110.py  build_registry_custom.py  build_registry_ldct_lungcr.py  build_registry_mosmed_vii.py  merge_registries.py  path.py  study_types.py  train_val_split.py  utils_io.py  verify_files.py
ctlib_binary/dataio/: volume_reader.py
ctlib_binary/datasets/: volume_ds.py
ctlib_binary/models/: medicalnet_r3d18.py
ctlib_binary/utils/: csv_registry.py
ctlib_medicalnet/: medicalnet_eval.py
ctlib_medicalnet/dataset/: build_mednet_dataset.py
ctlib_yolo/dataset/: augment_yolo.py  yolo_build.py  yolo_helpers.py
ctlib_yolo/infer/: eval_on_folders.py  yolo_eval_vis.py
runs_binary/binary_r3d18/: best.pth  history.csv  metrics.jsonl  steps.csv
runs_binary/binary_r3d18/epochs/epoch_019/: train_preds.csv  train_report.json  train_report.txt  val_preds.csv  val_report.json  val_report.txt  weights.pth
runs_binary/binary_r3d18/epochs/epoch_020/: train_preds.csv  train_report.json  train_report.txt  val_preds.csv  val_report.json  val_report.txt  weights.pth
