[project]
name = "medaitech"
version = "0.1.0"
description = ""
authors = [
    {name = "lenny",email = "your_email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.6,<4.0.0)",
    "torch (==2.6.0+cu124)",
    "torchvision (==0.21.0+cu124)",
    "torchaudio (==2.6.0+cu124)",
    "pydicom (>=3.0.1,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "simpleitk (>=2.5.2,<3.0.0)",
    "huggingface-hub (>=0.35.1,<0.36.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "ultralytics (>=8.3.203,<9.0.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "nibabel (>=5.3.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cu124"}
torchvision = {source = "pytorch-cu124"}
torchaudio = {source = "pytorch-cu124"}
